nfs/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-service
    #namespace: storage
spec:
  clusterIP: None
  ports:
  - name: nfs
    port: 2049
  - name: mountd
    port: 20048
  - name: rpcbind
    port: 111
  selector:
    app: nfs-server # must match with the label of NFS pod
